Closed Bug 1673923 Opened 4 years ago Closed 4 years ago

Range thumb is drawn with the wrong rect

Categories

(Core :: Widget, defect)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox82 --- unaffected
firefox83 --- unaffected
firefox84 --- fixed

People

(Reporter: mstange, Assigned: mstange)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

I broke this in bug 1673287.

Set release status flags based on info from the regressing bug 1673287

Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/658e8fc87a24
Draw the range thumb with the thumb rect. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: