Bug 1673923 - Draw the range thumb with the thumb rect. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D95032